Fixed restrictions overflow and added very basic home page

--- a/Yum/src/components/styles.css
+++ b/Yum/src/components/styles.css
@@ -40,11 +40,12 @@ h3 {
 .tag {
     background-color: #ccebff;
     border-radius: 20px;
-    padding: 2%;    
+     
     text-align: center;
     vertical-align: middle;
     width: 120%;
     font-weight: bold;
+    
     
 }
 
